# instance

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
src/shared_goals_instance/: __init__.py  app.py  models.py
tests/: conftest.py
tests/acceptance/: test_advice_and_partner_flow.py  test_agent_goal_flow.py  test_compass_planning_flow.py  test_contract_commit_flow.py
